--- a/package.json
+++ b/package.json
@@ -15,5 +15,18 @@
   "bugs": {
     "url": "https://github.com/SamEureka/github-notes/issues"
   },
-  "homepage": "https://github.com/SamEureka/github-notes#readme"
+  "homepage": "https://github.com/SamEureka/github-notes#readme",
+  "dependencies": {
+    "axios": "^0.7.0",
+    "history": "^1.13.1",
+    "re-base": "^1.3.1",
+    "react": "^0.14.3",
+    "react-router": "^1.0.2",
+    "reactfire": "^0.5.1"
+  },
+  "devDependencies": {
+    "babel-core": "^5.8.30",
+    "babel-loader": "^5.3.2",
+    "webpack": "^1.12.9"
+  }
 }
